--- a/.github/workflows/hourly.yml
+++ b/.github/workflows/hourly.yml
@@ -44,5 +44,7 @@ jobs:
 
           ISSUE_TITLE_BASE: "AI 불법/무단 학습데이터 소송 모니터링"
           ISSUE_LABEL: "ai-lawsuit-monitor"
+          # 디버그 모드(0/1). Actions -> Variables에 DEBUG=1 설정 시 활성화
+          DEBUG: ${{ vars.DEBUG }}
         run: |
           python -m src.run | tee run_output.log
