--- a/data/known_cases.yml
+++ b/data/known_cases.yml
@@ -1,22 +1,8 @@
-- match:
-    any:
-      - "Bartz"
-      - "Anthropic"
-      - "Project Panama"
-  enrich:
-    country: "미국"
-    court: "U.S. District Court, Northern District of California"
-    case_title: "Bartz et al. v. Anthropic PBC"
-    case_number: "3:24-cv-05417"
-
-- match:
-    any:
-      - "TED ENTERTAINMENT"
-      - "Snap Inc"
-      - "Imagine Lens"
-      - "2:26-cv-00754"
-  enrich:
-    country: "미국"
-    court: "U.S. District Court, Central District of California"
-    case_title: "TED ENTERTAINMENT, INC et al v. Snap Inc."
-    case_number: "2:26-cv-00754"
+# AI 규제 관련 주요 법안/정책 매칭 정보 (예시)
+# - match:
+#     any:
+#       - "EU AI Act"
+#       - "European Union AI regulation"
+#   enrich:
+#     case_title: "EU AI Act"
+#     reason: "유럽연합의 포괄적 AI 규제 법안에 대한 최신 진행 상황 정보."
