--- a/.github/workflows/regulation-monitor.yml
+++ b/.github/workflows/regulation-monitor.yml
@@ -43,7 +43,7 @@ jobs:
           COLLAPSE_ARTICLE_URLS: ${{ vars.COLLAPSE_ARTICLE_URLS }}
 
           ISSUE_TITLE_BASE: "AI 규제 모니터링"
-          ISSUE_LABEL: "ai-lawsuit-monitor"
+          ISSUE_LABEL: "ai-regulation-monitor"
           # 디버그 모드(0/1). Actions -> Variables에 DEBUG=1 설정 시 활성화
           DEBUG: ${{ vars.DEBUG }}
         run: |
